{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "2b80ceaa-2059-4ac3-8c34-3259f803a9d6",
            "actions": [
                {
                    "name": "Dbutton",
                    "type": "Button",
                    "id": "2103007a-2db1-4705-a1d3-79b4da8a61fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AButton",
                    "type": "Button",
                    "id": "2ecd1552-b42c-4c7c-beae-a20aca2ae5c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WButton",
                    "type": "Button",
                    "id": "a77d3856-22fa-43c8-b232-f8bec1f72886",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SButton",
                    "type": "Button",
                    "id": "06e23270-1b0b-41d6-b42a-acbda80e8adb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpaceButton",
                    "type": "Button",
                    "id": "6c9ccd32-9a37-44c3-b786-e2c1a60527d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RArrowKey",
                    "type": "Button",
                    "id": "6c850dd1-dc86-4340-b2c1-1f6b69c5f7dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LArrowKey",
                    "type": "Button",
                    "id": "27a8dcbe-d18d-47e0-987f-85c9452a0375",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UArrowKey",
                    "type": "Button",
                    "id": "fa512e09-3b23-4d2e-812c-77459c549b02",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "14523f19-b563-4040-90fb-472367e4ab78",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dbutton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f66ee96b-f5c5-4a74-adc0-0725d75c90b0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2aeb5ace-172a-446f-b220-e0ab81adfccd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb8e2ddf-9c74-4439-a57d-8b0c33b04bf8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd8d57d3-7f37-49fd-9d0c-9d688c9f986f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6c466ae-164f-4677-8260-5ad8b7beadcc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RArrowKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "690b927a-8c0e-496b-8301-7406e41b950d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LArrowKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccb7bb98-c9ec-4651-b0fc-3d59c1206b91",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UArrowKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}